--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -16,19 +16,19 @@ body{
 
 
 *, *:before, *:after {
-  box-sizing: border-box;
+  box-sizing:border-box;
   margin: 0;
 }
 
 .scene {
-  position: relative;
+  position:relative;
   height: 100%;
   background: #1d1f20;
-  /* padding: 20rem; */
+  padding: 40rem;
   text-align: center;
 }
 h1 {
-  position: relative;
+  /* position: relative; */
   font-size: 50px;
   text-transform: uppercase;
   color: #fff;
