--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -10,48 +10,14 @@ body{
     width: 200px;
   }
 
-  .bubble{
-    display:none;
-  }
+  /* .bubble{ */
+    /* display:none; */
+  /* } */
 
-/* <!-- https://codepen.io/suez/pen/PwKZwO -->
- */
-@import "compass/css3";
-
-*, *:before, *:after {
-  box-sizing:border-box;
-  margin: 0;
-}
-
-.scene {
-  position:relative;
-  height: 100%;
-  width:500px;
-  background: #1d1f20;
-  padding: 40rem;
-  padding-left:100px;
-  text-align: center;
-  overflow-x:hidden;
-}
-/* .banner {
-  position:absolute;
-  width:auto;
-  font-size: 50px;
-  text-transform: uppercase;
-  color: #fff;
-  z-index: 10;
-} */
-.magic {
-  z-index: 5;
-  position: absolute;
-  top: calc(50% - 10rem);
-  left: calc(50% - 10rem);
-  width: 20rem;
-  height: 20rem;
-  background: url('./ocean1.jpg') no-repeat fixed;
-  background-size: auto;
-  border-radius: 50%;
+.flex{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top:50px;
 
 }
-
-/* end of magic */
