--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,7 +1,7 @@
 
 
 html{
-    /* min-height:100vh; */
+    min-height:100vh;
     
     margin:0;
 }
@@ -10,9 +10,6 @@ body{
 }
 .page-content{
   background-image: url("ocean3.jpg") ;
-  /* background: rgb(46,97,113);
-background: linear-gradient(167deg, rgba(46,97,113,1) 31%, rgba(0,0,0,1) 100%); */
-  /* background-color: #2E6171; */
   min-height:100vh;
 }
 
